# ebash

./: Cargo.toml  README.md
src/: main.rs
src/shell/: builtins.rs  mod.rs  path.rs
